--- a/messages/install.txt
+++ b/messages/install.txt
@@ -56,7 +56,13 @@ For more info and screenshots, visit the [project site](github.com/dubeg/theme-l
     "lp_use_tab_style5" : true,
 
     "lp_use_small_tabs": true,
-    "lp_use_mini_tabs": true
+    "lp_use_mini_tabs": true,
+
+    // -----------------------------------------------
+    // New with 1.1.0
+    // -----------------------------------------------
+    "lp_use_vs" : true          // Visual Studio UI Style
+
 
 
 **Sublime Text 2 - User Settings**
@@ -87,3 +93,22 @@ For more info and screenshots, visit the [project site](github.com/dubeg/theme-l
 
     "lp_use_small_tabs": true,
     "lp_use_mini_tabs": true
+
+
+
+
+### Visual Studio Style
+
+To use the vs style, you must have ST3 (for now) and add a file named 'Widget - LP3.sublime-settings' in your User directory, with the following content:
+
+    {
+        "color_scheme": "Packages/Theme - LP/assets/Widget_VS.stTheme"
+    }
+
+In your User Settings, add the following line:
+
+    "lp_use_vs" : true
+
+Note that this setting override settings for tabs and the active sidebar row.  To use the vs folder icon, add this line to your User settings:
+
+    "lp_use_folder_icon2": true
