--- a/messages/changelog.txt
+++ b/messages/changelog.txt
@@ -1,3 +1,13 @@
+v1.1.1
+----------
+Release Date : 11 Feb 2015
+
+* Files are no longer hidden when setting lp_hide_folders is set to true.
+
+Sorry about that.
+
+
+
 v1.1.0
 ----------
 Release Date : 10 Feb 2015
