--- a/messages/changelog.txt
+++ b/messages/changelog.txt
@@ -1,3 +1,12 @@
+v1.2.0
+----------
+Release Date : 13 Feb 2015
+
+* Fix for hide_scrollbars
+* Fix for hide_btn_close_tabs for vs
+* Add tab size setting for vs: lp_use_vs_medium_tabs, lp_use_vs_medium_wide_tabs
+
+
 v1.1.1
 ----------
 Release Date : 11 Feb 2015
